styles.css
@import url('https://fonts.googleapis.com/css2?family=Poiret+One&family=Sacramento&display=swap');

@font-face {
    font-family: neonregular;
    src: url('neon____-webfont.woff2') format('woff2'),
        url('neon____-webfont.woff') format('woff');
    font-weight: normal;
    font-style: normal;

}

body {
    margin: 0;
    background-color: rgb(28, 23, 34);
    color: #f3f3f3;
    font-family: Poiret One;
}

a {
    text-decoration: none;
    color: #f3f3f3;
}

.flex-container {
    display: flex;
    max-width: 600px;
    padding: 1rem;
    margin: 0 auto;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.main-menu {
    padding: 1rem;
    color: #f3f3f3;
    text-align: center;
    font-family: poiret one;
}

.score {
    font-size: 1.6rem;
}

.reset {
    font-size: 1.8rem;
    padding: 1rem;
    border: 2px solid white;
    border-radius: 10px;
    margin-top: 2.8rem;
    letter-spacing: 1px;
    transition: color 0.1s ease-in-out, border 0.1s ease-in-out, filter 0.1s ease-in-out;
}

.reset:hover {
    cursor: pointer;
    color: #ebd61e;
    border: 2px solid #ecd81f;
    filter: drop-shadow(0 0 4px rgba(253, 234, 60, 0.527));
}

.neon-title {
    margin-bottom: 5rem;
    font-family: neonregular;
    font-size: 3.6rem;
    font-weight: 200;
    text-align: center;
    position: relative;
    width: 100%;
    line-height: 0.7em;
    -webkit-box-reflect: below -8px linear-gradient(transparent, #0000002f);
    outline: none;
    /* animation: neon-text 5s linear infinite; */
}

.neon-title .memo {
    animation: neon-text 5s linear infinite;
}

.neon-title .cards {
    font-family: 'sacramento';
    font-size: 4rem;
    filter: drop-shadow(2px 4px 6px rgb(22, 22, 22));
    color: rgb(206, 211, 130);
    text-shadow: 2px 0 2px rgb(212, 194, 28),
        0 0 10px rgb(212, 194, 28),
        0 0 20px rgb(212, 194, 28);
    /* 0 0 40px rgb(212, 194, 28),
      0 0 80px rgb(212, 194, 28),
      0 0 120px rgb(212, 194, 28); */
    /* 0 0 220px rgb(212, 194, 28); */
}

.grid {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    grid-template-rows: repeat(4, 1fr);
    column-gap: 10px;
    row-gap: 10px;
    aspect-ratio: 1;
    box-shadow: 0 0 50px -10px #111111;
    background-color: #68636e;
    border-radius: 20px;
    padding: 16px;
}


.card {
    position: relative;
    min-width: 70px;
    transition: transform 0.2s;
    transform-style: preserve-3d;
    perspective: 1000px;
    border-radius: 16px;
    -webkit-box-shadow: -2px 2px 6px 0px rgb(30 30 30);
    -moz-box-shadow: -2px 2px 6px 0px rgb(30 30 30);
    box-shadow: -2px 2px 6px 0px rgb(30 30 30);
}

.card-front,
.card-back {
    display: flex;
    justify-content: center;
    align-items: center;
    position: absolute;
    border-radius: 14px;
    width: 100%;
    height: 100%;
    backface-visibility: hidden;
    -webkit-backface-visibility: hidden;
}

.flip-left,
.pair {
    transform: rotateY(-180deg);
}

.pair {
    box-shadow: 0px 0px 4px 4px #fff260;
    transition: box-shadow 0.2s ease-in-out;
}

.card-front {
    background: linear-gradient(45deg, #15081a 0%, #2a212e 100%)
}

.card-back {
    background: linear-gradient(45deg, #1b1b1b 0%, #1a1a1a 100%);
    transform: rotateY(180deg);
}


img {
    width: 90%;
    height: 90%;
    filter: saturate(120%) brightness(120%) drop-shadow(2px 2px 5px black);
    user-select: none;
    -moz-user-select: none;
    -webkit-user-drag: none;
    -webkit-user-select: none;
    -ms-user-select: none;
}

footer {
    margin-top: 2rem;
}

@keyframes neon-text {

    0%,
    18%,
    20%,
    50.1%,
    60%,
    65.1%,
    80%,
    90.1%,
    92% {
        color: rgb(62, 43, 63);
        text-shadow: none;
    }

    18.2%,
    20.1%,
    30%,
    50%,
    60.1%,
    65%,
    80.1%,
    90%,
    92.1%,
    100% {
        color: rgb(233, 160, 176);
        text-shadow: 2px 0 2px rgb(212, 28, 98),
            0 0 10px rgb(212, 28, 98),
            0 0 20px rgb(212, 28, 98),
            0 0 40px rgb(212, 28, 98),
            0 0 80px rgb(212, 28, 98),
            0 0 150px rgb(212, 28, 98),
            0 0 260px rgb(212, 28, 98);
    }
}

